--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,5 @@
 ---
 deployment:
       tasks:
-        #- export DEPLOYPATH=/home/naturesbestphoto/public_html/  
-        - export DEPLOYPATH=/home/gnmg/public_html/  # Add /<app_folder> if required
+        export DEPLOYPATH=/home/naturesbestphoto/public_html/
         - /bin/cp -r * $DEPLOYPATH
