--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,11 @@
 ---
 deployment:
       tasks:
-        export DEPLOYPATH=/home/naturesbestphoto/public_html/
+        export DEPLOYPATH=/home/gnmg/public_html/
         - /bin/cp -r * $DEPLOYPATH
+
+
+
+
+
+        # export DEPLOYPATH=/home/naturesbestphoto/public_html/
