--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -8,4 +8,5 @@ deployment:
 
 
 
-        # export DEPLOYPATH=/home/naturesbestphoto/public_html/
+        # export DEPLOYPATH=/home/naturesbestphoto/public_html/ 
+        #this is a test to see if this will work
